force-app/main/default/objects/DHS_Report_Export__c/DHS_Report_Export__c.object-meta.xml
<CustomObject>
    <label>Report Export</label>
    <nameField>
        <displayFormat>RE-{000000000}</displayFormat>
        <label>Report Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Exports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>