force-app/main/default/objects/DHS_Report_Export__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>