force-app/main/default/objects/DHS_Report_Export__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document__c</fullName>
            </value>
            <value>
                <fullName>Case__c</fullName>
            </value>
            <value>
                <fullName>Lead__c</fullName>
            </value>
            <value>
                <fullName>Message__c</fullName>
            </value>
            <value>
                <fullName>Investigator_Check__c</fullName>
            </value>
            <value>
                <fullName>Waiver_Information__c</fullName>
            </value>
            <value>
                <fullName>DIA_Document__c</fullName>
            </value>
            <value>
                <fullName>DIA_Lead__c</fullName>
            </value>
            <value>
                <fullName>DIA_Message__c</fullName>
            </value>
            <value>
                <fullName>DIA_Investigator_Check__c</fullName>
            </value>
            <value>
                <fullName>DIA_Waiver_Information__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>